# testgen-hs

./: .gitignore  README.md  flake.nix
.github/workflows/: release.yml  upload.yml
nix/: cardano-api--expose-internal.diff  cardano-ledger-core--Arbitrary-PoolMetadata.diff  cardano-ledger-test--expose-helpers.diff  cardano-ledger-test--windows-fix.diff  cardano-node--apply-patches.diff  cardano-node--export-cardano-submit-api.diff  cardano-node--expose-cardano-ledger-test.diff  internal.nix  rewrite_cabal_project.py
testgen-hs/: CLI.hs  Deserialize.hs  Encoder.hs  Evaluation.hs  Generators.hs  Main.hs  Response.hs  SynthEvalTx.hs  protocol-params-preview.json  testgen-hs.cabal
