cabal-version: 3.0
name:          testgen-hs
build-type:    Simple
synopsis:
  CBOR test case generator and deserializer for cross-checking other implementations

-- Version tracks cardano-node, adding a patch segment:
version:       10.1.2.1

executable testgen-hs
  main-is:            Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base                                                  >=4.7 && <5
    , base16-bytestring
    , bytestring
    , cardano-api:internal
    , cardano-binary
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-shelley
    , cardano-submit-api
    , cborg
    , generic-random
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-cardano:unstable-cardano-testlib
    , ouroboros-network-api
    , QuickCheck
    , quickcheck-instances
    , random
    , serialise
    , text
    , time

  other-modules:
    CLI
    Deserialize
    Generators
    Paths_testgen_hs

  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications

  ghc-options:
    -O2 -Werror -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

  default-language:   Haskell2010
