cabal-version: 3.0
name:          testgen-hs
build-type:    Simple
synopsis:
  CBOR test case generator and deserializer for cross-checking other implementations

-- Version tracks cardano-node, adding a patch segment:
version:       10.4.1.2

executable testgen-hs
  main-is:            Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , async
    , base                                                  >=4.7 && <5
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-test
    , cardano-slotting
    , cardano-submit-api
    , cborg
    , containers
    , data-default
    , file-embed
    , generic-random
    , microlens
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-cardano:unstable-cardano-testlib
    , plutus-core
    , plutus-ledger-api
    , prettyprinter
    , QuickCheck
    , quickcheck-instances
    , random
    , serialise
    , text
    , time

  --, cardano-crypto
  --, cardano-crypto-wrapper
  other-modules:
    CLI
    Deserialize
    Encoder
    Evaluation
    Generators
    Paths_testgen_hs
    Response
    SynthEvalTx

  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications

  ghc-options:
    -O2 -Werror -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages -threaded -rtsopts -O2 -Werror
    "-with-rtsopts=-A16m -T -N"

  default-language:   Haskell2010
